<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.appu.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/bIs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/is"
        android:textSize="25sp" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignParentLeft="true"
        android:text="@string/hos" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bIs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/pol" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_alignParentRight="true"
        android:text="@string/oth" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText4"
        android:layout_below="@+id/editText4"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/vvno"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvtextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/vd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/cvno"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/cd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/checkBox3"
        android:text="@string/set" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtextView1"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/button1"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/cn"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/vn"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText3"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/ph"
        android:inputType="phone" />

</RelativeLayout>